Add Hudson module
Hudson module with support for:

- List views: hudson views
- List jobs: hudson jobs <view_name> (default "all")
- Build: hudson build <job_name>

It has support for config user/pass in the case Hudson
is installed behind basic web server HTTP security.

--- a/config-sample.yml
+++ b/config-sample.yml
@@ -9,3 +9,9 @@ twitter:
   oauth_token: YOUR OAUTH TOKEN # Twitter OAuth token
   oauth_token_secret: YOUR OAUTH TOKEN SECRET # Twitter OAuth token secret
   gateway: api.apigee.com # Twitter gateaway
+hudson:
+  base_uri: http://localhost:8080 # Hudson URL
+  options:
+    :basic_auth:
+      :username: "" # Username if Hudson behind basic HTTP security
+      :password: "" # Password if Hudson behind basic HTTP security
